--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
+annotated-types==0.7.0
+anyio==3.7.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
 fastapi==0.104.1
-jinja2==3.1.2
+git-filter-repo==2.47.0
+greenlet==3.2.3
+h11==0.16.0
+idna==3.10
+Jinja2==3.1.2
+MarkupSafe==3.0.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.0.1
 python-multipart==0.0.6
+requests==2.32.4
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.27.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==2.5.0
 uvicorn==0.24.0
-sqlalchemy>1.4.0
-requests>=2.26.0
