--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ fastapi==0.104.1
 git-filter-repo==2.47.0
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.2
 MarkupSafe==3.0.2
@@ -14,6 +16,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.0.1
 python-multipart==0.0.6
+python-telegram-bot==22.1
 requests==2.32.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
