--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.8.1
 annotated-types==0.7.0
 anyio==3.7.1
 certifi==2025.6.15
@@ -34,11 +35,12 @@ nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 packaging==25.0
+psutil==7.0.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.0.1
 python-multipart==0.0.6
-python-telegram-bot==22.1
+python-telegram-bot==22.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
